Bug Fix, All working in optimal Condition (no invalid/ error on entry)